[package]
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"
name = "lora-experiment"
readme = "README.md"
version = "0.1.0"
[[bin]]
bench = false
name = "lora-experiment"
test = false

[dependencies]
cortex-m = ">=0.6"
cortex-m-rt = ">=0.6"
cortex-m-rtfm = "=0.5.0-beta.1"
cortex-m-semihosting = "0.3.3"
embedded-graphics = ">=0.6.0-alpha.2"
heapless = "0.4.4"
nb = "0.1.2"
panic-halt = "0.2.0"
panic-semihosting = ">=0.5"
#ssd1306 = "0.2.5"
ssd1306 = ">=0.3.0-alpha.2"
embedded-hal = ">=0.2.3"

[dependencies.urpc]
path = "../urpc"
default-features = false

[dependencies.arrayvec]
default-features = false
#version = "0.5.1"
path = "../arrayvec"
features = ["as-slice"]

[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.8.0"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
#version = ">=0.4.0"
#git = "https://github.com/stm32-rs/stm32f1xx-hal"
#branch = "master"
path = "../stm32f1xx-hal"
#git = "https://github.com/Windfisch/stm32f1xx-hal"
#branch = "all_patches"

[profile.dev]
opt-level = "z" # +
#codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
